--- a/antico/src/main/resources/static/css/custom_toast.css
+++ b/antico/src/main/resources/static/css/custom_toast.css
@@ -1,9 +1,63 @@
 @charset "UTF-8";
 
 .custom-toast {
-  	padding: 13px;
+	padding: 13px;
 }
 
 .custom-progress-bar {
-  	background-color: gray;
+	background-color: gray;
 }
+
+div.review_detail_box {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+span.review_detail_title {
+	margin: 20px 0;
+	font-weight: bold;
+	font-size: 20pt;
+}
+
+div.review_detail_product_title_box {
+	margin-bottom: 10px;
+}
+
+div.review_product_title_box span {
+	color: gray;
+}
+
+div.review_detail_cotent_box {
+	margin-top : 20px;
+	width: 80%; 
+	display : flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: start;
+	padding: 20px;
+	background-color: #F1F4F6;
+	border-radius: 15px;
+	display: flex;
+}
+
+p.review_detail_content {
+	margin-top : 10px;
+	display: block;
+	width: 100%;
+	max-width: 600px;
+	word-wrap: break-word;
+	line-height: 1.5;
+	border-radius: 8px;
+	text-align: left;
+	margin-bottom: 10px;
+	font-weight : bold;
+}
+
+li.review_detail_survey {
+	margin : 5px 0;
+	font-size : 13pt;
+}
+
